DER_NORMAL/GRAMATICA/derNormal.g4
grammar derNormal;

programa: expresion EOF;

expresion
    : factor SUM expresion
    | factor RES expresion
    | factor
    ;

factor
    : term MUL factor
    | term DIV factor
    | term
    ;

term
    : NUM
    | RES NUM
    ;

SUM: '+'; RES: '-'; MUL: '*'; DIV: '/';
NUM: DECIMAL | ENTERO;
DECIMAL: DIGITO+ '.' DIGITO+;
ENTERO: DIGITO+;
fragment DIGITO: [0-9];
WS: [ \t]+ -> skip;
